Bump Spotbugs